test/error/tyDouble.dck
%-

tydecl sex = Boy | Girl

tydecl sex = Boy | Girl | NonBinary
